--- a/distrisandiz-master/app/build.gradle
+++ b/distrisandiz-master/app/build.gradle
@@ -42,7 +42,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'net.gotev:uploadservice:2.1'
-    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.itextpdf:itextg:5.5.10' //para generar PDF
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.1' // para vsualizar PDF
     implementation 'org.apache.commons:commons-io:1.3.2'
@@ -54,5 +53,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
 
+    implementation('com.squareup.retrofit2:retrofit:2.1.0') {
+        exclude module: 'okhttp'
+    }
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 
+    compile 'com.squareup.retrofit2:converter-scalars:2.5.0'
 }
