--- a/distrisandiz-master/app/build.gradle
+++ b/distrisandiz-master/app/build.gradle
@@ -61,5 +61,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 
-    compile 'com.squareup.retrofit2:converter-scalars:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
 }
